Thu Apr 24 13:01:12 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_type.cpp (gen_common_tmplinst):

          Substituted full name for local name in generation of
          parameters for explicit template instantiation.

        * TAO_IDL/be/be_visitor_interface/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/any_op_cs.cpp:

          Removed generation of explicit template instantiation for
          TAO_Object_Manager and TAO_Valuetype_Manager. It is now
          handled elsewhere.

Thu Apr 24 11:48:16 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/DynamicInterface/Request.cpp:

          Removed duplicate defintion of CORBA::Request::_duplicate.

Thu Apr 24 10:33:57 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuetype/field_cs.cpp:

          Added '.in ()' to generated code for field accessor when the
          type of the field is a pseudo object. Thanks to Andrey
          Nechypurenko <andrey.nechypurenko@siemens.com> and Nanbor Wang
          <nanbor@cse.wustl.edu> for reporting the problem.

Thu Apr 24 10:03:48 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/Sched/Config_Scheduler.cpp:

	  Fixed warnings on unused variable. Thanks to Bala for pointing this out.

Thu Apr 24 08:11:04 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/DynamicInterface/Context.h:
	* tao/DynamicInterface/ExceptionList.h: Added a undef for
	  TAO_EXPORT_MACRO and redefined TAO_EXPORT_MACRO. This should fix
	  problems with MSVC builds.

Wed Apr 23 22:12:37 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/CDR_Encaps_Codec.cpp (encode_value):

	  If the internal ACE_Message_Block in the supplied Any is null,
	  explicitly create an ACE_Message_Block and populate with the
	  marshalled data.  Fixes run-time errors in the Codec and
	  IORInterceptor tests.  Thanks to Jeff for providing a fix.

	* tao/PortableServer/POA.cpp (TAO_POA, create_POA_i):
