@@ -282,9 +282,10 @@ be_visitor_field_cdr_op_ci::visit_interface (be_interface *node)
     case TAO_CodeGen::TAO_CDR_OUTPUT:
       if (node->is_defined ())
         {
-          *os << "CORBA::Object::marshal (_tao_aggregate."
-              << f->local_name ()
-              << ".in (),strm)" << be_nl;
+          *os << "CORBA::Object::marshal (" << be_idt << be_idt_nl
+              << "_tao_aggregate." << f->local_name () << ".in ()," << be_nl
+              << "strm" << be_uidt_nl
+              << ")" << be_uidt;
         }
       else
         {
@@ -348,9 +349,10 @@ be_visitor_field_cdr_op_ci::visit_interface_fwd (be_interface_fwd *node)
     case TAO_CodeGen::TAO_CDR_OUTPUT:
       if (node->is_defined ())
         {
-          *os << "CORBA::Object::marshal (_tao_aggregate."
-              << f->local_name ()
-              << ".in (), strm)" << be_nl;
+          *os << "CORBA::Object::marshal (" << be_idt << be_idt_nl
+              << "_tao_aggregate." << f->local_name () << ".in ()," << be_nl
+              << "strm" << be_uidt_nl
+              << ")" << be_uidt;
         }
       else
         {
